--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,7 +106,7 @@ jobs:
           SECRET_KEY: test-secret-key-for-ci
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          pytest tests/ -v --cov=app --cov-report=xml --cov-report=term --cov-fail-under=50
+          pytest tests/ -v --cov=app --cov-report=xml --cov-report=term --cov-fail-under=50 --ignore=tests/test_e2e.py
       
       - name: Upload Coverage Report
         uses: codecov/codecov-action@v3
@@ -222,6 +222,15 @@ jobs:
           pip install -r requirements.txt
           pip install pytest playwright
           playwright install chromium
+      
+      - name: Start Application Server
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
+          SECRET_KEY: test-secret-key-for-ci
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          sleep 5
       
       - name: Run Integration Tests
         env:
