--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pytest-playwright==0.4.4
 httpx==0.25.2
 alembic==1.13.0
 openai==1.3.7
+slowapi==0.1.9
 pylint==3.0.3
 flake8==6.1.0
 black==23.11.0
